Closed Bug 1630991 Opened 6 years ago Closed 6 years ago

Perma TEST-UNEXPECTED-FAIL | security/manager/ssl/tests/unit/test_osreauthenticator.js | xpcshell return code: 1 when Gecko 77 merges to release on 2020-05-04

Categories

(Core :: Security: PSM, defect)

defect

Tracking

()

VERIFIED FIXED
mozilla77
Tracking Status
firefox-esr68 --- unaffected
firefox75 --- unaffected
firefox76 --- fixed
firefox77 --- verified

People

(Reporter: dluca, Assigned: jaws)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:

Central as beta simulation:
https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=usercancel%2Cretry%2Ctestfailed%2Cbusted%2Cexception&revision=75d190b66b10ef8186454a7b39803e580402f820&selectedJob=298099211

Log:
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=298099211&repo=try&lineNumber=2790

INFO -  TEST-START | security/manager/ssl/tests/unit/test_osreauthenticator.js
[task 2020-04-17T13:54:09.866Z] 13:54:09  WARNING -  TEST-UNEXPECTED-FAIL | security/manager/ssl/tests/unit/test_osreauthenticator.js | xpcshell return code: 1
[task 2020-04-17T13:54:09.867Z] 13:54:09     INFO -  TEST-INFO took 1820ms
[task 2020-04-17T13:54:09.867Z] 13:54:09     INFO -  >>>>>>>
[task 2020-04-17T13:54:09.868Z] 13:54:09     INFO -  (xpcshell/head.js) | test MAIN run_test pending (1)
[task 2020-04-17T13:54:09.868Z] 13:54:09     INFO -  (xpcshell/head.js) | test run_next_test 0 pending (2)
[task 2020-04-17T13:54:09.868Z] 13:54:09     INFO -  (xpcshell/head.js) | test MAIN run_test finished (2)
[task 2020-04-17T13:54:09.868Z] 13:54:09     INFO -  running event loop
[task 2020-04-17T13:54:09.869Z] 13:54:09     INFO -  security/manager/ssl/tests/unit/test_osreauthenticator.js | Starting test_asyncReauthenticateUser
[task 2020-04-17T13:54:09.869Z] 13:54:09     INFO -  (xpcshell/head.js) | test test_asyncReauthenticateUser pending (2)
[task 2020-04-17T13:54:09.869Z] 13:54:09     INFO -  TEST-PASS | security/manager/ssl/tests/unit/test_osreauthenticator.js | test_asyncReauthenticateUser - [test_asyncReauthenticateUser : 14] nsIOSReauthenticator should be available - {"QueryInterface":"function QueryInterface() {\\n    [native code]\\n}","asyncReauthenticateUser":"function asyncReauthenticateUser() {\\n    [native code]\\n}"} == true
[task 2020-04-17T13:54:09.869Z] 13:54:09     INFO -  (xpcshell/head.js) | test run_next_test 0 finished (2)
[task 2020-04-17T13:54:09.870Z] 13:54:09     INFO -  PID 28891 | /builds/worker/checkouts/gecko/xpcom/ds/nsTArray.h:637:36: runtime error: load of value 136, which is not a valid value for type 'bool'
[task 2020-04-17T13:54:09.870Z] 13:54:09     INFO -  PID 28891 |     #0 0x7f896f429187 in Construct<bool &> /builds/worker/checkouts/gecko/xpcom/ds/nsTArray.h:637:36
[task 2020-04-17T13:54:09.870Z] 13:54:09     INFO -  PID 28891 |     #1 0x7f896f429187 in bool* nsTArray_Impl<bool, nsTArrayInfallibleAllocator>::AppendElement<bool&, nsTArrayInfallibleAllocator>(bool&) /builds/worker/checkouts/gecko/xpcom/ds/nsTArray.h:2597:3
[task 2020-04-17T13:54:09.870Z] 13:54:09     INFO -  PID 28891 |     #2 0x7f89765f827e in BackgroundReauthenticateUser /builds/worker/checkouts/gecko/security/manager/ssl/OSReauthenticator.cpp:260:11
[task 2020-04-17T13:54:09.871Z] 13:54:09     INFO -  PID 28891 |     #3 0x7f89765f827e in operator() /builds/worker/checkouts/gecko/security/manager/ssl/OSReauthenticator.cpp:308:9
[task 2020-04-17T13:54:09.871Z] 13:54:09     INFO -  PID 28891 |     #4 0x7f89765f827e in mozilla::detail::RunnableFunction<OSReauthenticator::AsyncReauthenticateUser(nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, mozIDOMWindow*, JSContext*, mozilla::dom::Promise**)::$_20>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:557:5
[task 2020-04-17T13:54:09.871Z] 13:54:09     INFO -  PID 28891 |     #5 0x7f896c785830 in nsThreadPool::Run() /builds/worker/checkouts/gecko/xpcom/threads/nsThreadPool.cpp:300:14
[task 2020-04-17T13:54:09.871Z] 13:54:09     INFO -  PID 28891 |     #6 0x7f896c78650c in non-virtual thunk to nsThreadPool::Run() /builds/worker/checkouts/gecko/xpcom/threads/nsThreadPool.cpp
[task 2020-04-17T13:54:09.872Z] 13:54:09     INFO -  PID 28891 |     #7 0x7f896c77748b in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1200:14
[task 2020-04-17T13:54:09.872Z] 13:54:09     INFO -  PID 28891 |     #8 0x7f896c78189c in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:481:10
[task 2020-04-17T13:54:09.872Z] 13:54:09     INFO -  PID 28891 |     #9 0x7f896d7aa839 in mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:302:20
[task 2020-04-17T13:54:09.872Z] 13:54:09     INFO -  PID 28891 |     #10 0x7f896d6dc967 in RunInternal /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:315:10
[task 2020-04-17T13:54:09.873Z] 13:54:09     INFO -  PID 28891 |     #11 0x7f896d6dc967 in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:308:3
[task 2020-04-17T13:54:09.873Z] 13:54:09     INFO -  PID 28891 |     #12 0x7f896d6dc967 in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:290:3
[task 2020-04-17T13:54:09.873Z] 13:54:09     INFO -  PID 28891 |     #13 0x7f896c7716da in nsThread::ThreadFunc(void*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:444:10
[task 2020-04-17T13:54:09.873Z] 13:54:09     INFO -  PID 28891 |     #14 0x7f897e6dbd2e in _pt_root /builds/worker/checkouts/gecko/nsprpub/pr/src/pthreads/ptthread.c:201:5
[task 2020-04-17T13:54:09.873Z] 13:54:09     INFO -  PID 28891 |     #15 0x7f897e2e56da in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x76da)
[task 2020-04-17T13:54:09.874Z] 13:54:09     INFO -  PID 28891 |     #16 0x7f8966b4688e in clone /build/glibc-OTsEL5/glibc-2.27/misc/../sysdeps/unix/sysv/linux/x86_64/clone.S:95
[task 2020-04-17T13:54:09.874Z] 13:54:09     INFO -  PID 28891 | SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior /builds/worker/checkouts/gecko/xpcom/ds/nsTArray.h:637:36 in
[task 2020-04-17T13:54:09.874Z] 13:54:09     INFO -  <<<<<<<
[task 2020-04-17T13:54:09.877Z] 13:54:09     INFO -  TEST-START | devtools/client/memory/test/xpcshell/test_individuals_05.js
[task 2020-04-17T13:55:00.894Z] 13:55:00     INFO -  TEST-PASS | devtools/client/memory/test/xpcshell/test_individuals_05.js | took 51018ms
[task 2020-04-17T13:55:00.898Z] 13:55:00     INFO -  INFO | Result summary:
[task 2020-04-17T13:55:00.900Z] 13:55:00     INFO -  INFO | Passed: 651
[task 2020-04-17T13:55:00.901Z] 13:55:00  WARNING -  INFO | Failed: 1
[task 2020-04-17T13:55:00.902Z] 13:55:00  WARNING -  One or more unittests failed.
[task 2020-04-17T13:55:00.902Z] 13:55:00     INFO -  INFO | Todo: 0
[task 2020-04-17T13:55:00.903Z] 13:55:00     INFO -  INFO | Retried: 2
[task 2020-04-17T13:55:00.904Z] 13:55:00     INFO -  SUITE-END | took 1155s
[task 2020-04-17T13:55:00.904Z] 13:55:00     INFO -  Node moz-http2 server shutting down ...
[task 2020-04-17T13:55:00.992Z] 13:55:00    ERROR - Return code: 1
[task 2020-04-17T13:55:00.992Z] 13:55:00     INFO - TinderboxPrint: xpcshell-xpcshell<br/>651/<em class="testfail">1</em>/0
[task 2020-04-17T13:55:00.993Z] 13:55:00  WARNING - # TBPL FAILURE #

This bug looks to be a regression of bug 1623745

Jared: Can you please take a look?

Flags: needinfo?(jaws)

These are the two notable failures:
[task 2020-04-17T13:54:09.870Z] 13:54:09 INFO - PID 28891 | /builds/worker/checkouts/gecko/xpcom/ds/nsTArray.h:637:36: runtime error: load of value 136, which is not a valid value for type 'bool'
[task 2020-04-17T13:54:09.874Z] 13:54:09 INFO - PID 28891 | SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior /builds/worker/checkouts/gecko/xpcom/ds/nsTArray.h:637:36 in

Flags: needinfo?(jaws)
Assignee: nobody → jaws
Status: NEW → ASSIGNED
Pushed by jwein@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/48178c03283d Add missing initialization of out parameter. r=MattN
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77

Please request uplift for beta (blocks uplift for bug 1623745).

Flags: needinfo?(jaws)
Flags: needinfo?(jaws)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: