Bug 1630991 - Add missing initialization of out parameter. r=MattN

Differential Revision: https://phabricator.services.mozilla.com/D71366